Fix: Redirection in TeamApplication.EditTeam using teamId

--- a/League/Views/Match/EnterResult.cshtml
+++ b/League/Views/Match/EnterResult.cshtml
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="mb-3 col-12 col-md-6">
                 <label class="mt-0">@Localizer["Opponents"]</label>
-                <div class="fw-bold d-inline-block">@Model.Opponent!.Home</div><div class="fw-bold d-inline-block">&nbsp;:&nbsp;</div><div class="fw-bold d-inline-block">@Model.Opponent.Guest</div>
+                <div><span class="fw-bold">@Model.Opponent!.Home</span><span class="fw-bold">&nbsp;:&nbsp;</span><span class="fw-bold">@Model.Opponent.Guest</span></div>
             </div>
         </div>
         <div class="row">
