--- a/League/Views/Account/ForgotPassword.cshtml
+++ b/League/Views/Account/ForgotPassword.cshtml
@@ -33,6 +33,6 @@
 </form>
 @section Scripts {
     <script type="text/javascript">
-        $('#@Html.IdFor(m => m.EmailOrUsername)').focus();
+        document.querySelector('#@Html.IdFor(m => m.EmailOrUsername)').focus();
     </script>
 }
