--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -30,7 +30,7 @@
             <label asp-for="Password" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
@@ -43,7 +43,7 @@
             <label asp-for="ConfirmPassword" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
@@ -56,9 +56,9 @@
 </div>
 @section Scripts {
     <script type="text/javascript">
-    $('#@Html.IdFor(m => m.Password)').attr("type", "password");
-    $('#@Html.IdFor(m => m.ConfirmPassword)').attr("type", "password");
-    $('#@Html.IdFor(m => m.EmailOrUsername)').focus();
+        document.querySelector('#@Html.IdFor(m => m.Password)').setAttribute("type", "password");
+        document.querySelector('#@Html.IdFor(m => m.ConfirmPassword)').setAttribute("type", "password");
+        document.querySelector('#@Html.IdFor(m => m.EmailOrUsername)').focus();
     </script>
 }
 
