--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -15,7 +15,7 @@
                 <label asp-for="CurrentPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="CurrentPassword" autofocus class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
@@ -25,7 +25,7 @@
                 <label asp-for="NewPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="NewPassword" class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
@@ -38,7 +38,7 @@
                 <label asp-for="ConfirmPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
