--- a/League/Views/Manage/_EditPhoneModalPartial.cshtml
+++ b/League/Views/Manage/_EditPhoneModalPartial.cshtml
@@ -27,7 +27,11 @@
         </form>
         @* The script must be inside modal-body in order to run if the form is re-displayed after validation *@
         <script type="text/javascript">
-            $('#@BtnRemove').on('click', function() { $('#@nameof(Model.PhoneNumber)').val(''); });
+
+            document.querySelector('#@(BtnRemove)').addEventListener('click', function () {
+                document.querySelector('#@nameof(Model.PhoneNumber)').value = '';
+            });
+        
         </script>
     </modal-body>
     <modal-footer show-dismiss="true" dismiss-text="@Localizer["Cancel"].Value">
