--- a/League/Views/Account/Register.cshtml
+++ b/League/Views/Account/Register.cshtml
@@ -35,7 +35,7 @@
             <label asp-for="Password" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
@@ -48,7 +48,7 @@
             <label asp-for="ConfirmPassword" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
@@ -92,7 +92,7 @@
 </div>
 @section Scripts {
     <script type="text/javascript">
-        $('#@Html.IdFor(m => m.ConfirmPassword)').attr("type", "password");
-        $('#@Html.IdFor(m => m.Password)').attr("type", "password").focus();
+        document.querySelector('#@Html.IdFor(m => m.ConfirmPassword)').setAttribute("type", "password");
+        document.querySelector('#@Html.IdFor(m => m.Password)').setAttribute("type", "password").focus();
     </script>
 }
