--- a/League/Views/Map/Index.cshtml
+++ b/League/Views/Map/Index.cshtml
@@ -143,7 +143,7 @@
                 });
         }
 
-        $(document).ready(function() {
+        document.addEventListener('DOMContentLoaded', function () {
             @{
                 if (Model.IsSingleValue)
                 {
@@ -155,6 +155,6 @@
                 }
             }
         });
-//]]>
+    //]]>
     </script>
 }
