--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -76,11 +76,12 @@
         </div>
     </footer>
     <jl-javascript-logger-definitions request-id="@ViewContext.HttpContext.TraceIdentifier" />
-    <script src="~/lib/jsnlog/jsnlog.min.js"></script>
-    <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/bootstrap-all.min.js"></script>
-    <script src="~/lib/i18n/i18n-all.min.js"></script>
-    <script src="~/js/site.min.js"></script>
+    <script src="~/lib/jsnlog/jsnlog.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/bootstrap-all.min.js" asp-append-version="true"></script>
+    <script src="~/lib/i18n/i18n-all.min.js" asp-append-version="true"></script>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+    <script src="~/js/Site.ModalForm.js" asp-append-version="true"></script>
     <environment include="Production"><partial name="@League.Views.ViewNames.Shared._GoogleAnalyticsScriptsPartial" /></environment>
     @await RenderSectionAsync("scripts", required: false)
 </body>
