--- a/League/Views/TeamApplication/SelectTeam.cshtml
+++ b/League/Views/TeamApplication/SelectTeam.cshtml
@@ -76,10 +76,13 @@
 @section scripts
 {
     <script type="text/javascript">
-        $('.table tbody tr').click(function (event) {
-            if (event.target.type !== 'radio') {
-                $(':radio', this).trigger('click');
-            }
+        const rows = document.querySelectorAll('.table tbody tr');
+        rows.forEach(function (row) {
+            row.addEventListener('click', function (e) {
+                if (event.target.type !== 'radio') {
+                    this.querySelector('[type="radio"]').click();
+                }
+            });
         });
     </script>
 }
