Replace jquery-based components with vanilla javascript
* Replace tempusdominus-bootstrap-4 with tempus-dominus 6.7.7
* Remove moment 2.29.4
* Remove jQuery 3.5.1
* Remove i18n
* Add uglify-js 3.17.4 for async/await compatibility
* Add DateOnlyModelBinder
* Add TimeOnlyModelBinder

--- a/League/Views/Team/MyTeam.cshtml
+++ b/League/Views/Team/MyTeam.cshtml
@@ -239,7 +239,7 @@
 </div>
 @section styles
 {
-    <link rel="stylesheet" href="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css" />
+    <link rel="stylesheet" href="~/lib/tempus-dominus/tempus-dominus.min.css" asp-append-version="true"/>
     <style type="text/css">
         @* Team members *@
 
@@ -280,8 +280,6 @@
 }
 @section scripts
 {
-    @* moment and tempusdominus-bootstrap-4 are required for EditTeam modal *@
-    <script type="text/javascript" src="~/lib/Moment/moment.min.js"></script>
-    <script type="text/javascript" src="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js"></script>
-    <partial name="@nameof(League.Views.ViewNames.Shared._DateTimePickerScriptPartial)" />
+    @* tempus-dominus is required for EditTeam modal *@
+    <script type="text/javascript" src="~/lib/tempus-dominus/tempus-dominus.all.min.js" asp-append-version="true"></script>
 }
