--- a/League/Views/Match/EnterResult.cshtml
+++ b/League/Views/Match/EnterResult.cshtml
@@ -47,9 +47,9 @@
         <div class="row">
             <div class="mb-3 col-12 col-md-5">
                 <label asp-for="MatchDate" class="form-label"></label>
-                <div class="input-group" id="picker_@nameof(Model.MatchDate)" data-target-input="nearest">
-                    <input asp-for="MatchDate" type="text" autocomplete="off" class="form-control@(AddDateErr()) datepicker datetimepicker-input" data-target="#picker_@nameof(Model.MatchDate)" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
-                    <span class="input-group-text" data-target="#picker_@nameof(Model.MatchDate)" data-toggle="datetimepicker">
+                <div id="@(Model.MatchDate)-c" class="input-group" data-input-type="date" data-td-target-input="nearest" data-td-target-toggle="nearest">
+                    <input asp-for="MatchDate" type="text" asp-format="{0:@(CultureInfo.CurrentCulture.DateTimeFormat.ShortDatePattern)}" autofocus autocomplete="off" class="form-control@(AddDateErr())" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
+                    <span class="input-group-text" data-td-target="@nameof(Model.MatchDate)-c" data-td-toggle="datetimepicker">
                         <i class="far fa-calendar-alt"></i>
                     </span>
                 </div>
@@ -61,41 +61,44 @@
         <div class="row">
             <div class="mb-3 col-12 col-md-4">
                 <label asp-for="MatchTimeFrom" class="form-label"></label>
-                <div class="input-group" id="picker_@nameof(Model.MatchTimeFrom)" data-target-input="nearest">
-                    <input asp-for="MatchTimeFrom" type="text" autofocus autocomplete="off" class="form-control@(AddDateErr()) datepicker datetimepicker-input" data-target="#picker_@nameof(Model.MatchTimeFrom)" aria-describedby="@nameof(Model.MatchTimeFrom)HelpBlock" />
-                    <span class="input-group-text" data-target="#picker_@nameof(Model.MatchTimeFrom)" data-toggle="datetimepicker">
+                <div id="@(Model.MatchTimeFrom)-c" class="input-group" data-input-type="time" data-td-target-input="nearest" data-td-target-toggle="nearest">
+                    <input asp-for="MatchTimeFrom" type="text" asp-format="{0:@(CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern)}" autocomplete="off" class="form-control" aria-describedby="@nameof(Model.MatchTimeFrom)HelpBlock" />
+                    <span class="input-group-text" data-td-target="@nameof(Model.MatchTimeFrom)-c" data-td-toggle="datetimepicker">
                         <i class="far fa-clock"></i>
                     </span>
                 </div>
                 <small id="@nameof(Model.MatchTimeFrom)HelpBlock" class="d-block form-text text-muted">
                     @Localizer["Time format"]: @(CultureInfo.CurrentUICulture.DateTimeFormat.ShortTimePattern.ToUpperInvariant().Replace("TT", "AM/PM"))
                 </small>
+                <span asp-validation-for="MatchTimeFrom" class="text-danger"></span>
             </div>
             <div class="mb-3 col-12 col-md-4">
                 <label asp-for="MatchTimeTo" class="form-label"></label>
-                <div class="input-group" id="picker_@nameof(Model.MatchTimeTo)" data-target-input="nearest">
-                    <input asp-for="MatchTimeTo" type="text" autocomplete="off" class="form-control@(AddDateErr()) datepicker datetimepicker-input" data-target="#picker_@nameof(Model.MatchTimeTo)" aria-describedby="@nameof(Model.MatchTimeTo)HelpBlock" />
-                    <span class="input-group-text" data-target="#picker_@nameof(Model.MatchTimeTo)" data-toggle="datetimepicker">
+                <div id="@(Model.MatchTimeTo)-c" class="input-group" data-input-type="time" data-td-target-input="nearest" data-td-target-toggle="nearest">
+                    <input asp-for="MatchTimeTo" type="text" asp-format="{0:@(CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern)}" autocomplete="off" class="form-control" aria-describedby="@nameof(Model.MatchTimeTo)HelpBlock" />
+                    <span class="input-group-text" data-td-target="@nameof(Model.MatchTimeTo)-c" data-td-toggle="datetimepicker">
                         <i class="far fa-clock"></i>
                     </span>
                 </div>
                 <small id="@nameof(Model.MatchTimeTo)HelpBlock" class="d-block form-text text-muted">
                     @Localizer["Time format"]: @(CultureInfo.CurrentUICulture.DateTimeFormat.ShortTimePattern.ToUpperInvariant().Replace("TT", "AM/PM"))
                 </small>
+                <span asp-validation-for="MatchTimeTo" class="text-danger"></span>
             </div>
         </div>
         @{
             for (var i = 0; i < Model.Sets.Count; i++)
             {
+                var localI = i;
                 <div class="row">
                     <div class="mb-3 col-12">
                         <label class="form-label">@Localizer["Set #{0}", i + 1]</label>
                         <div class="input-group">
-                            <input asp-for="@Model.Sets[i].Home" type="text" autocomplete="off" class="form-control text-start @(AddSetErr(i))" style="max-width:5em" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
+                            <input asp-for="@Model.Sets[localI].Home" type="text" autocomplete="off" class="form-control text-start @(AddSetErr(localI))" style="max-width:5em" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
                             <span class="input-group-text">
                                 :
                             </span>
-                            <input asp-for="@Model.Sets[i].Guest" type="text" autocomplete="off" class="form-control text-end @(AddSetErr(i))" style="max-width:5em" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
+                            <input asp-for="@Model.Sets[localI].Guest" type="text" autocomplete="off" class="form-control text-end @(AddSetErr(localI))" style="max-width:5em" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
                         </div>
                     </div>
                 </div>
@@ -134,7 +137,7 @@
 </div>
 @section styles
 {
-    <link rel="stylesheet" href="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css" />
+    <link rel="stylesheet" href="~/lib/tempus-dominus/tempus-dominus.min.css" asp-append-version="true" />
     <style type="text/css">
         /* Start: Change checkbox color */
         .border-warning > .form-check > input[type=checkbox]:checked {
@@ -150,23 +153,23 @@
 }
 @section scripts
 {
-    <script type="text/javascript" src="~/lib/Moment/moment.min.js"></script>
-    <script type="text/javascript" src="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js"></script>
-    <partial name="@nameof(League.Views.ViewNames.Shared._DateTimePickerScriptPartial)" />
-    <script type="text/javascript">
-    $(document).ready(function() {
-        // don't use attribute 'autofocus' with datetimepicker - this will focus before initialization
-        $('#picker_@Html.IdFor(m => m.MatchDate)').datetimepicker({
-            format: 'L' /*, minDate: moment().startOf('day'), maxDate: moment('09/30/2019').startOf('day')*/
-        });
-        $('#picker_@Html.IdFor(m => m.MatchTimeFrom)').datetimepicker({ format: 'LT', stepping: 1 });
-        $('#picker_@Html.IdFor(m => m.MatchTimeTo)').datetimepicker({ format: 'LT', stepping: 1 });
-    });
+    <script type="text/javascript" src="~/lib/tempus-dominus/tempus-dominus.all.min.js" asp-append-version="true"></script>    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', OnDOMContentLoaded, false);
+        function OnDOMContentLoaded() {
+            const locale = '@(CultureInfo.CurrentCulture.ToString())';
+            const parentLocale = '@(CultureInfo.CurrentCulture.Parent.TwoLetterISOLanguageName)';
+            const hourCycle = '@(CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern.Contains("t") ? 12 : 24)';
 
-    $('#@nameof(Model.MatchDate)').on('change',
-        function() {
-            if ($(this).val() === '') $('#@Html.IdFor(m => m.MatchTimeFrom)').val('');
-            if ($(this).val() === '') $('#@Html.IdFor(m => m.MatchTimeTo)').val('');
-        });
+            const tdFactory = new Site.TempusDominusFactory(locale, parentLocale, hourCycle, false);
+            [].forEach.call(document.querySelectorAll('[data-input-type="date"]'), function (el) {
+                tdFactory.CreateCalendarPicker(el, '@(CultureInfo.CurrentCulture.DateTimeFormat.ShortDatePattern)');
+            });
+            [].forEach.call(document.querySelectorAll('[data-input-type="time"]'), function (el) {
+                tdFactory.CreateTimePicker(el, '@(CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern.Replace("tt", "T"))');
+                el._tempusDominus.updateOptions({
+                    stepping: 1,
+                });
+            });
+        };
     </script>
 }
