--- a/League/Views/TeamApplication/EditVenue.cshtml
+++ b/League/Views/TeamApplication/EditVenue.cshtml
@@ -27,8 +27,8 @@
         }
         @if (Model.IsWarning)
         {
-            <div class="p-1 mb-2 col-12 col-md-6 border border-warning rounded">
-                <div class="form-check">
+            <div class="p-1 mb-2 col-12 col-md-6 border border-warning rounded mb-3">
+                <div class="form-check form-check-warning ms-1">
                     <input asp-for="OverrideWarnings" type="checkbox" class="form-check-input">
                     <label class="form-check-label text-warning mt-0" asp-for="OverrideWarnings"></label>
                 </div>
@@ -103,11 +103,11 @@
         }
 
         /* Start: Change checkbox color */
-        .border-warning > .form-check > input[type=checkbox]:checked {
+        .form-check.form-check-warning > input[type=checkbox]:checked {
             background-color: var(--bs-warning);
         }
 
-        .border-warning > .form-check > input[type=checkbox] {
+        .form-check.form-check-warning > input[type=checkbox] {
             border: 2px solid var(--bs-warning);
             background-color: transparent;
         }
